<resources>

    <string name="app_name">ShoeStore</string>
    <string name="user_name_title">Username</string>
    <string name="password_title">Password</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="register_link_text">Don\'t have an account?</string>
    <string name="register_link">Sign up here</string>
    <string name="login_link_text">Already have an account?</string>
    <string name="login_link">Sign in here</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>

    <string name="welcome_title">Welcome</string>
    <string name="instructions_title">Instructions</string>

    <string name="next_button">Next</string>
    <string name="finish_button">Finish</string>
    <string name="previous_button">Previous</string>
    <string name="shoe_list_title">Shoe List</string>
    <string name="shoe_detail_title">Shoe Details</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="shoe_company">Shoe Company</string>
    <string name="shoe_description">Shoe Description</string>
    <string name="shoe_image">Shoe Image</string>
    <string name="save_button">Save</string>

    <string name="logout">Logout</string>
    <string name="cancel_button">Cancel</string>
    <string name="welcome_paragraph_one">Welcome to our shoe shopping app! We know how important it is to find the perfect pair of shoes, whether you\'re looking for comfortable sneakers for your daily jog, stylish heels for a special occasion, or durable boots for outdoor adventures.</string>
    <string name="welcome_paragraph_two">Our app allows you to search for shoes by category, size, color, price, and other criteria. You can also save your favorite styles to your wishlist, or create a virtual \"try on\" by uploading a photo of your feet. If you need help finding the right fit or style.</string>
    <string name="welcome_paragraph_three">In addition to offering a convenient shopping experience, we also strive to provide the best value for our customers.</string>
    <string name="welcome_paragraph_four">Thank you for choosing our app as your go-to destination for shoe shopping. We hope you find the perfect pair of shoes that fits your needs, budget, and style!</string>
    <string name="instructions">"In the next section, you will find an empty Shoe Inventory. to add shoe in into your list press on the <b>+</b> Button on the bottom-right side."</string>

</resources>
