<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- I used Constraint Layout, Linear layout could be used instead
    , but I used Constraint to support more complex layout-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/welcome_title"
            style="@style/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_wide"
            android:text="@string/welcome_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcome_paragraph_one"
            style="@style/WelcomeText"
            android:text="@string/welcome_paragraph_one"
            app:layout_constraintBottom_toTopOf="@+id/welcome_paragraph_two"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_title"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/welcome_paragraph_two"
            style="@style/WelcomeText"
            android:text="@string/welcome_paragraph_two"
            app:layout_constraintBottom_toTopOf="@+id/welcome_paragraph_three"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_paragraph_one" />

        <TextView
            android:id="@+id/welcome_paragraph_three"
            style="@style/WelcomeText"
            android:text="@string/welcome_paragraph_three"
            app:layout_constraintBottom_toTopOf="@+id/welcome_paragraph_four"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_paragraph_two" />

        <TextView
            android:id="@+id/welcome_paragraph_four"
            style="@style/WelcomeText"
            android:text="@string/welcome_paragraph_four"
            app:layout_constraintBottom_toTopOf="@+id/next_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_paragraph_three" />

        <Button
            android:id="@+id/next_button"
            style="@style/BaseButtons"
            android:text="@string/next_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>