<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.shoestore.viewmodels.ShoeListViewModel" />
    </data>

    <!-- I used Constraint Layout, so i can add more to the complexity later,
     the alternative would be nested layouts-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/shoe_detail_title"
            style="@style/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_wide"
            android:text="@string/shoe_detail_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/shoe_name_label"
            style="@style/ShoeLabels"
            android:text="@string/shoe_name"
            app:layout_constraintBottom_toTopOf="@+id/shoe_size_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_detail_title" />

        <EditText
            android:id="@+id/shoe_name"
            style="@style/ShoeEditText"
            android:ems="10"
            android:hint="@string/shoe_name"
            android:inputType="textPersonName"
            android:text="@={viewModel.shoeName}"
            app:flow_verticalAlign="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_name_label"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/shoe_size_label"
            style="@style/ShoeLabels"
            android:layout_weight="1"
            android:text="@string/shoe_size"
            app:layout_constraintBottom_toTopOf="@+id/shoe_company_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_label" />

        <EditText
            android:id="@+id/shoe_size"
            style="@style/ShoeEditText"
            android:ems="10"
            android:hint="@string/shoe_size"
            android:inputType="numberDecimal"
            android:text="@={viewModel.shoeSize}"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_size_label"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/shoe_company_label"
            style="@style/ShoeLabels"
            android:text="@string/shoe_company"
            app:layout_constraintBottom_toTopOf="@+id/shoe_description_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size_label" />

        <EditText
            android:id="@+id/shoe_company"
            style="@style/ShoeEditText"
            android:ems="10"
            android:hint="@string/shoe_company"
            android:inputType="textPersonName"
            android:text="@={viewModel.shoeCompany}"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_company_label"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/shoe_description_label"
            style="@style/ShoeLabels"
            android:text="@string/shoe_description"
            app:layout_constraintBottom_toTopOf="@+id/cancel_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_company_label" />

        <EditText
            android:id="@+id/shoe_description"
            style="@style/ShoeEditText"
            android:ems="10"
            android:hint="@string/shoe_description"
            android:inputType="textPersonName"
            android:text="@={viewModel.shoeDescription}"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_description_label"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/save_button"
            style="@style/BaseButtons"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:text="@string/save_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/cancel_button" />

        <Button
            android:id="@+id/cancel_button"
            style="@style/BaseButtons"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:text="@string/cancel_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/save_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>