<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- I used Nested Linear Layout, because the design is very linear -->

    <LinearLayout
        android:id="@+id/shoe_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/shoe_name_info"
                style="@style/ShoeInfoLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoe_name"
                app:layout_constraintBottom_toTopOf="@+id/shoe_description_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/shoe_size_info"
                style="@style/ShoeInfoLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoe_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoe_company_info" />

            <TextView
                android:id="@+id/shoe_company_info"
                style="@style/ShoeInfoLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoe_company"
                app:layout_constraintBottom_toTopOf="@+id/shoe_size_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoe_description_info" />

            <TextView
                android:id="@+id/shoe_description_info"
                style="@style/ShoeInfoLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoe_description"
                app:layout_constraintBottom_toTopOf="@+id/shoe_company_info"
                app:layout_constraintTop_toBottomOf="@+id/shoe_name_info" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/shoe_info_name"
                style="@style/ShoeInfo"
                tools:text="Nike Air" />

            <TextView
                android:id="@+id/shoe_info_size"
                style="@style/ShoeInfo"
                android:gravity="center"
                tools:text="31"
                tools:layout_editor_absoluteX="195dp" />

            <TextView
                android:id="@+id/shoe_info_company"
                style="@style/ShoeInfo"
                tools:text="Nike" />

            <TextView
                android:id="@+id/shoe_info_description"
                style="@style/ShoeInfo"
                tools:text="Nike Air technology." />
        </LinearLayout>

    </LinearLayout>
</layout>